<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">abhimanyu_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">Email</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? Register Now</string>
  <string name="msg_confirm_passwor">Confirm password</string>
  <string name="lbl_laminate">Laminate</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
  <string name="lbl_or_login_with">Or Login with</string>
  <string name="lbl_register_now">Register Now</string>
  <string name="msg_already_have_an">Already have an account? Login Now</string>
  <string name="msg_20_off_on_your">20% off on your
first purchase</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_categories">Categories</string>
  <string name="lbl_hardwood">Hardwood</string>
  <string name="msg_continue_as_a_g">Continue as a guest</string>
  <string name="lbl_vinyl">Vinyl</string>
  <string name="msg_already_have_an2">Already have an account? </string>
  <string name="msg_enter_your_pass">Enter your password</string>
  <string name="lbl_tiles">Tiles</string>
  <string name="msg_welcome_to_floo">Welcome To Floor Visualiszer</string>
  <string name="msg_enter_your_emai">Enter your email</string>
  <string name="msg_or_register_wit">Or Register with</string>
  <string name="lbl_password">Password</string>
  <string name="msg_forgot_password">Forgot Password?</string>
  <string name="msg_welcome_back_g">Welcome back! Glad to see you, Again!</string>
  <string name="msg_hello_register">Hello! Register to get started</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_login_now">Login Now</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
