<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.abhimanyusapplication.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_12pxh"
            android:paddingVertical="@dimen/_12pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:id="@+id/txtHelloRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:text="@{registerVM.registerModel.txtHelloRegister}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_hello_register"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsernameInput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etUsernameInputValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etEmailInput"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etEmailInputValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPasswordInput"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etPasswordInputValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_indigo_50_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etConfirmpasswor"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etConfirmpassworValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRegisterwith"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/indigo_50"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.34" android:layout_width="0dp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrRegisterwit"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="0.33" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtOrRegisterwit}"
                style="@style/txtUrbanistromansemibold14" tools:text="@string/msg_or_register_wit"/>
            <View android:background="@color/indigo_50"
                android:id="@+id/lineLineTwo"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.34" android:layout_width="0dp"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameGoogleButton"
            android:layout_gravity="end"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_120pxh"
            android:layout_marginStart="@dimen/_120pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="@dimen/_105pxh" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_gravity="start"
                android:layout_height="@dimen/_23pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_23pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_46pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtConfirmation}"
            style="@style/txtPoppinssemibold15" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
