<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.abhimanyusapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageButton
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="@dimen/_41pxh"
            android:paddingHorizontal="@dimen/_12pxh"
            android:paddingVertical="@dimen/_12pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        <TextView android:id="@+id/txtWelcomebackG"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:text="@{loginVM.loginModel.txtWelcomebackG}"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_welcome_back_g"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_emai"
            android:id="@+id/etEnteryouremai"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etEnteryouremaiValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_indigo_50_radius_8"
            android:drawableEnd="@drawable/img_eye"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_pass"
            android:id="@+id/etEnteryourpass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_18pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etEnteryourpassValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_242pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotPassword}"
            style="@style/txtUrbanistromansemibold14" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearLoginwith"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/indigo_50"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.36" android:layout_width="0dp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrLoginwith"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="0.27" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtOrLoginwith}"
                style="@style/txtUrbanistromansemibold14" tools:text="@string/lbl_or_login_with"/>
            <View android:background="@color/indigo_50"
                android:id="@+id/lineLineTwo"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.36" android:layout_width="0dp"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameGoogleButton"
            android:layout_gravity="end"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_120pxh"
            android:layout_marginStart="@dimen/_120pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="@dimen/_105pxh" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_gravity="start"
                android:layout_height="@dimen/_23pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_23pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_45pxh"
            android:layout_marginStart="@dimen/_45pxh"
            android:layout_marginTop="@dimen/_155pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtConfirmation}"
            style="@style/txtPoppinssemibold15" tools:text="@string/msg_don_t_have_an_a"/>
    </LinearLayout>
</layout>
