<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeVM" type="com.abhimanyusapplication.app.modules.home.data.viewmodel.HomeVM"/>
    </data>
    <LinearLayout android:id="@+id/linearHome"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageMenu"
            android:layout_gravity="start"
            android:layout_height="@dimen/_21pxh"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="@dimen/_35pxh"
            android:scaleType="fitXY" android:src="@drawable/img_menu"
            tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWelcomeToFloo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{homeVM.homeModel.txtWelcomeToFloo}"
            style="@style/txtAcmeregular20" tools:text="@string/msg_welcome_to_floo"/>
        <FrameLayout android:id="@+id/frameStackhomeofferimg"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_91pxv"
            android:layout_marginEnd="@dimen/_2pxh"
            android:layout_marginStart="@dimen/_2pxh"
            android:layout_marginTop="@dimen/_14pxv" android:layout_width="@dimen/_356pxh">
            <ImageView android:id="@+id/imageHomeofferimg"
                android:layout_gravity="start"
                android:layout_height="@dimen/_91pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_homeofferimg}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_homeofferimg"/>
            <TextView android:id="@+id/txtOffer"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:text="@{homeVM.homeModel.txtOffer}"
                style="@style/txtPoppinssemibold18" tools:text="@string/msg_20_off_on_your"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCategories"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{homeVM.homeModel.txtCategories}"
            style="@style/txtPoppinssemibold16" tools:text="@string/lbl_categories"/>
        <FrameLayout android:id="@+id/frameStackcthardwoodone"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_563pxv"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_9pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_341pxh">
            <ImageView android:id="@+id/imageCthardwoodOne"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_111pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_cthardwood1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_cthardwood1"/>
            <ImageView android:id="@+id/imageCttileOne"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_111pxv"
                android:layout_marginBottom="@dimen/_173pxv"
                android:layout_marginTop="@dimen/_173pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_cttile1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_cttile1"/>
            <ImageView android:id="@+id/imageVinylflooring"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_111pxv"
                android:layout_marginBottom="@dimen/_39pxv"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_vinylflooring}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vinylflooring"/>
            <ImageView android:id="@+id/imageLaminatectOne"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_111pxv"
                android:layout_marginBottom="@dimen/_142pxv"
                android:layout_marginTop="@dimen/_142pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_laminatect1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_laminatect1"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtHardwood"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_105pxv"
                android:layout_marginEnd="@dimen/_126pxh"
                android:layout_marginStart="@dimen/_126pxh"
                android:layout_marginTop="@dimen/_105pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_23pxh"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtHardwood}"
                style="@style/txtNATS20" tools:text="@string/lbl_hardwood"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLaminate"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_247pxv"
                android:layout_marginEnd="@dimen/_126pxh"
                android:layout_marginStart="@dimen/_126pxh"
                android:layout_marginTop="@dimen/_247pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_23pxh"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtLaminate}"
                style="@style/txtNATS20" tools:text="@string/lbl_laminate"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTiles"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_142pxv"
                android:layout_marginEnd="@dimen/_144pxh"
                android:layout_marginStart="@dimen/_144pxh"
                android:layout_marginTop="@dimen/_142pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_23pxh"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtTiles}"
                style="@style/txtNATS20" tools:text="@string/lbl_tiles"/>
            <TextView android:ellipsize="end" android:id="@+id/txtVinyl"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_143pxh"
                android:layout_marginStart="@dimen/_143pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_23pxh"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtVinyl}"
                style="@style/txtNATS20" tools:text="@string/lbl_vinyl"/>
        </FrameLayout>
    </LinearLayout>
</layout>
