<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="welcomeVM" type="com.abhimanyusapplication.app.modules.welcome.data.viewmodel.WelcomeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearWelcome"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStackwelcomeimg"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_610pxv"
            android:layout_marginStart="@dimen/_1pxh" android:layout_width="@dimen/_359pxh">
            <ImageView android:id="@+id/imageWelcomeimg"
                android:layout_gravity="center"
                android:layout_height="@dimen/_610pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_width="@dimen/_353pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
                imageRes="@{@drawable/img_welcomeimg}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_welcomeimg"/>
            <ImageView android:id="@+id/imageNameimage"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_118pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_width="@dimen/_352pxh"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_25pxh}"
                imageRes="@{@drawable/img_nameimage}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_nameimage"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_register"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtContinueasag"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_106pxh"
            android:layout_marginStart="@dimen/_106pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{welcomeVM.welcomeModel.txtContinueasag}"
            style="@style/txtUrbanistromanbold15" textUnderline="true" tools:text="@string/msg_continue_as_a_g"/>
    </LinearLayout>
</layout>
